[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "asynchaos"
version = "0.1.0"
description = "Lightweight async chaos engineering library — inject latency, connection drops, and timeouts into Python async services for resilience testing."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "asynchaos contributors" }
]
keywords = [
    "chaos-engineering", "asyncio", "testing", "resilience",
    "fastapi", "microservices", "fault-injection", "latency"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "coverage[toml]>=7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/asynchaos"
Documentation = "https://github.com/yourusername/asynchaos#readme"
Repository = "https://github.com/yourusername/asynchaos"
"Bug Tracker" = "https://github.com/yourusername/asynchaos/issues"
Changelog = "https://github.com/yourusername/asynchaos/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asynchaos = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/asynchaos"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
